--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,23 +4,23 @@
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
     <string name="nav_header_title" translatable="false">Music Storage</string>
     <string name="nav_header_desc" translatable="false">Music Storage logo</string>
-    <string name="nav_header_subtitle" translatable="false">De lichte en efficiente muziek manager bij de hand</string>
-    <string name="title_activity_song_list" translatable="false">Lied Bibliotheek</string>
-    <string name="song_name_placeholder" translatable="false">Lied Naam</string>
-    <string name="song_genre_placeholder" translatable="false">Genre</string>
-    <string name="song_artist_placeholder" translatable="false">Artiest</string>
-    <string name="song_release_placeholder" translatable="false">Uitbreng Datum</string>
-    <string name="song_length_placeholder" translatable="false">Lengte</string>
-    <string name="song_explicit_placeholder" translatable="false">Expliciet</string>
-    <string name="title_activity_album_list" translatable="false">Album Bibliotheek</string>
-    <string name="title_activity_album" translatable="false">Album Titel</string>
-    <string name="title_add_album" translatable="false">Album toevoegen</string>
-    <string name="album_add_name" translatable="false">Album naam</string>
-    <string name="album_add_release" translatable="false">Uitgeef datum</string>
-    <string name="album_add_confirm" translatable="false">Voeg album toe</string>
-    <string name="go_to_album_list_nav" translatable="false">Album lijst</string>
-    <string name="go_to_album_list_button" translatable="false">Ga naar album lijst</string>
-    <string name="song_add_button" translatable="false">Voeg lied toe</string>
+    <string name="nav_header_subtitle">De lichte en efficiente muziek manager bij de hand</string>
+    <string name="title_activity_song_list">Lied Bibliotheek</string>
+    <string name="song_name_placeholder">Lied Naam</string>
+    <string name="song_genre_placeholder">Genre</string>
+    <string name="song_artist_placeholder">Artiest</string>
+    <string name="song_release_placeholder">Uitbreng Datum</string>
+    <string name="song_length_placeholder">Lengte</string>
+    <string name="song_explicit_placeholder">Expliciet</string>
+    <string name="title_activity_album_list">Album Bibliotheek</string>
+    <string name="title_activity_album">Album Titel</string>
+    <string name="title_add_album">Album toevoegen</string>
+    <string name="album_add_name">Album naam</string>
+    <string name="album_add_release">Uitgeef datum</string>
+    <string name="album_add_confirm">Voeg album toe</string>
+    <string name="go_to_album_list_nav">Album lijst</string>
+    <string name="go_to_album_list_button">Ga naar album lijst</string>
+    <string name="song_add_button">Voeg lied toe</string>
     <string name="song_edit_button">Bevestig bewerking</string>
     <string name="title_activity_song_edit">SongEditActivity</string>
     <string name="is_explicit">Expliciet</string>
@@ -28,5 +28,5 @@
     <string name="datepicker_toast">Kies uw uitbreng datum</string>
     <string name="datepicker_button_text"> - Klik om het te veranderen</string>
     <string name="song_edit_subtitle"> (Bewerking modus)</string>
-    <string name="song_add_title"> Voeg lied toe</string>
+    <string name="song_add_title">Voeg lied toe</string>
 </resources>
